--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -67,9 +67,13 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        run: exit && bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+      - name: EIP Board
+        uses: gaudren/eip-board@action
+        with:
+          path: ./_site/eip-board.html
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v2
